# sldk

./: .gitignore  BOOT_CODE_CHANGES.md  CIRCUITPYTHON_OPTIMIZATIONS.md  CLAUDE.md  GROUP_BY_PARK_FIX.md  LedSimulatorLibrary.md  LedSimulatorPlan.md  PyLEDSimulator_Summary.md  boot.py  check_github_repo.py  code-bak.py  code.py  code_entry.py  code_swarm_demo.py  code_swarm_demo_full.py  conftest.py  debug_server.py  epcot-test-data.json  error_log  final_web_test.py  makefile  migrate_swarm_examples.py  ota.py  pytest.ini  real_api_test  release.json  remove_typing.py  run_dev_test.py  screenlog.0  secrets.py  settings.json  simple_run_test.py  style.css  test-suite.py  test_dev_server.py  test_live_data.py  test_log  test_mock_log  test_mock_vs_live.py  test_position_debug.py  (+16 more)
sldk/: HARDWARE_SUPPORT_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  README.md  conftest.py  pyproject.toml  pytest.ini  setup.cfg  test_led_display.py  test_sldk_basic.py  test_web_basic.py  test_window.py  visual_effects_window.py
sldk/docs/: HARDWARE_GUIDE.md
sldk/examples/: animation_demo.py  animation_demo_simple.py  custom_hardware.py  effects_demo.py  enhanced_content_demo.py  hello_world.py  reveal_effect_demo.py  simple_effects_demo.py  strategy_effects_demo.py  theme_park_with_effects.py  web_server_demo.py
sldk/examples/simulator/: color_animation_demo.py  dual_zone_example.py  manual_scroll_demo.py  matrixportal_s3_example.py  rainbow_text.py  scrolling_demo.py  scrolling_text_example.py  simple_text_update.py
sldk/examples/swarm/: README_precalc_player.md  complete_swarm_demo.py  force_display_test.py  generate_swarm_frames.py  play_swarm_frames.py  precalc_path_generator.py  precalc_paths.json  precalc_player.py  pure_flocking_demo.py  theme_park_waits_simple_swarm.py  theme_park_waits_swarm.py  theme_park_waits_swarm_balanced.py  theme_park_waits_swarm_egg_drop.py  theme_park_waits_swarm_fixed.py  theme_park_waits_swarm_flocking_fixed.py  theme_park_waits_swarm_gif.py  theme_park_waits_swarm_gif_hq.py  theme_park_waits_swarm_optimized.py  theme_park_waits_swarm_truly_visible.py  visible_flocking_demo.py
sldk/src/sldk/: __init__.py  cli.py  content.py  content_classes.py
sldk/src/sldk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sldk/tests/: __init__.py
sldk/tests/unit/: test_circuitpython_compat.py
(+594 files in other folders)
