[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sldk"
version = "0.1.0"
description = "Scrolling LED Dev Kit - A development framework for CircuitPython LED matrix displays"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SLDK Contributors"},
]
keywords = ["led", "matrix", "display", "circuitpython", "esp32", "scrolling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18",
    "black>=22.0",
    "ruff>=0.0.250",
]
simulator = [
    "pygame>=2.0.0",
    "pillow>=8.0.0",
    "numpy>=1.19.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/sldk"
"Bug Tracker" = "https://github.com/yourusername/sldk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sldk = ["py.typed", "simulator/fonts/*.bdf", "simulator/LICENSE"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.ruff]
line-length = 88
target-version = "py37"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]
ignore = ["E501"]  # Line too long - handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"