[metadata]
name = sldk
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
simulator = 
    led-simulator>=0.1.0
    pygame>=2.0.0
dev =
    pytest>=6.0
    pytest-asyncio>=0.18.0
    black>=22.0
    ruff>=0.1.0
web =
    aiohttp>=3.8.0

[options.entry_points]
console_scripts =
    sldk-demo = sldk.cli:main